--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Iqbal",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^6.1.0",
     "express": "^4.16.4"
   },
   "devDependencies": {
